--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "doc": "doc"
   },
   "dependencies": {
+    "browser-sync": "^2.18.13",
     "gulp": "^3.9.1",
     "gulp-sass": "^3.1.0"
   },
